resolve cutting off problem

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -427,6 +427,11 @@ body {
     right: 150px;
 }
 
+.generic-title img {
+    width: 300px;
+    height: 39px;
+}
+
 .author-img {
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
     width: 100%;
